// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`list > renders empty summary list when fields array is empty 1`] = `
"
<dl class="govuk-summary-list">
</dl>"
`;

exports[`list > renders summary list with boolean values converted to Yes/No 1`] = `
"
<dl class="govuk-summary-list">
  <div class="govuk-summary-list__row">
    <dt class="govuk-summary-list__key">
      Are you a pig farmer?
    </dt>
    <dd class="govuk-summary-list__value">
      Yes
    </dd>
  </div>
  <div class="govuk-summary-list__row">
    <dt class="govuk-summary-list__key">
      Do you have a license?
    </dt>
    <dd class="govuk-summary-list__value">
      No
    </dd>
  </div>
</dl>"
`;

exports[`list > renders summary list with fields and processed values 1`] = `
"
<dl class="govuk-summary-list">
  <div class="govuk-summary-list__row">
    <dt class="govuk-summary-list__key">
      Total Pigs
    </dt>
    <dd class="govuk-summary-list__value">
      10
    </dd>
  </div>
  <div class="govuk-summary-list__row">
    <dt class="govuk-summary-list__key">
      Are you a pig farmer?
    </dt>
    <dd class="govuk-summary-list__value">
      Yes
    </dd>
  </div>
  <div class="govuk-summary-list__row">
    <dt class="govuk-summary-list__key">
      Farm Name
    </dt>
    <dd class="govuk-summary-list__value">
      Green Acres Farm
    </dd>
  </div>
</dl>"
`;

exports[`list > renders summary list with null and undefined values 1`] = `
"
<dl class="govuk-summary-list">
  <div class="govuk-summary-list__row">
    <dt class="govuk-summary-list__key">
      Total Pigs
    </dt>
    <dd class="govuk-summary-list__value">
      
    </dd>
  </div>
  <div class="govuk-summary-list__row">
    <dt class="govuk-summary-list__key">
      Farm Name
    </dt>
    <dd class="govuk-summary-list__value">
      
    </dd>
  </div>
</dl>"
`;

exports[`list > renders summary list with zero and empty string values 1`] = `
"
<dl class="govuk-summary-list">
  <div class="govuk-summary-list__row">
    <dt class="govuk-summary-list__key">
      Total Pigs
    </dt>
    <dd class="govuk-summary-list__value">
      0
    </dd>
  </div>
  <div class="govuk-summary-list__row">
    <dt class="govuk-summary-list__key">
      Farm Name
    </dt>
    <dd class="govuk-summary-list__value">
      
    </dd>
  </div>
</dl>"
`;
